--- a/index.css
+++ b/index.css
@@ -105,7 +105,7 @@ button.play{
     height: 50px;
 }
 
-.wait-modal{
+.wait-modal, .game-over-modal{
     position: absolute;
     min-width: 100vw;
     min-height: 100vh;
@@ -114,5 +114,6 @@ button.play{
     justify-content: center;
     align-items: center;
 }
+
 
 
