--- a/index.css
+++ b/index.css
@@ -16,7 +16,10 @@ body{
     align-items: center;
 }
 
+body.playing{
+    flex-direction: row;
 
+}
 .header{
     flex: 1;
     padding: 10px 15px 10px 15px;
@@ -27,6 +30,10 @@ body{
 
 .play-area{
     flex:1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 10px;
 }
 .grid{
@@ -35,6 +42,9 @@ body{
     grid-template-rows: repeat(10,40px);
 }
 
+.grid.playing{
+    pointer-events: none;
+}
 
 
 .complete{
